--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Advice generator</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Manrope:wght@800&family=PT+Sans&display=swap');
     </style>
